# netflix-recommend-py

./: README.md  api_search.ipynb  app.py  eda.ipynb  enhanced_recommendation_system.ipynb  genre_matrix.npy  preprocessed_video.csv  pyproject.toml  requirements.txt  train_tfidf_recommend.ipynb  video.csv
script/: train_tfidf_recommend.py
